k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: andreas-kavountzis-live-pfs
    app.kubernetes.io/instance: andreas-kavountzis-live-pfs
    app.kubernetes.io/name: andreas-kavountzis-live-pfs
  name: andreas-kavountzis-live-pfs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/instance: andreas-kavountzis-live-pfs
    app.kubernetes.io/name: andreas-kavountzis-live-pfs
  sessionAffinity: None
  type: ClusterIP
