k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  name: akpfs
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: andreas-kavountzis-live-pfs
    weight: 100
  wildcardPolicy: None
